tests/sources/invalid/literals/literal_errors.fire
// Literal and constant errors

// Integer overflow
fn overflow() -> void {
    too_big: int32 = 99999999999999999999;  // Exceeds int32 range
}

// Invalid hex literals
fn invalid_hex() -> void {
    bad_hex: int32 = 0xGHIJ;  // Invalid hex digits  //~ ERROR FS-PARSE-0010 @23
}

// Invalid escape sequences
fn invalid_escape() -> void {
    bad: string = "hello\q";  // \q is not a valid escape
}

// Unclosed string literal
fn unclosed_string() -> void {
    bad: string = "unclosed;  //~ ERROR FS-PARSE-0012 @19
//~^ ERROR FS-PARSE-0010 @20
//~^^ ERROR FS-PARSE-0010 @20
}

// Invalid number format
fn invalid_number() -> void {
    bad: int32 = 123abc;  // Invalid number  //~ ERROR FS-PARSE-0010 @21
}

// Float assigned to int without cast
fn float_to_int_no_cast() -> void {
    x: int32 = 3.14;  // Should require explicit cast  //~ ERROR FS-SEM-0002 @5
}

// Boolean literal typo
fn boolean_typo() -> void {
    x: bool = True;  // Should be 'true' (lowercase)  //~ ERROR FS-PARSE-0003 @15
    y: bool = False;  // Should be 'false' (lowercase)  //~ ERROR FS-PARSE-0003 @15
}
